create or destroy global keyboard hook